bat.bool1.posneg.PosNeg.scala.error
Compilation error:
PosNeg:8: error: ')' expected but 'else' found.
  else {
  ^